compiler/testData/cli/jvm/returnAsWhenKey.out
compiler/testData/cli/jvm/returnAsWhenKey.kt:4:5: error: 'when' expression must be exhaustive. Add the 'true', 'false' branches or an 'else' branch.
    when (true) {
    ^^^^
COMPILATION_ERROR
